# python-code

./: .gitignore  404.html  Dockerfile  DockerfileForEnv  README.md  index.html  mkdocs.yml  requirements.txt  sitemap.xml  socatStart.sh  startJupyterDocker.sh  startPythonDocker.sh
Flask/: Dockerfile  requirements.txt
algorithms/: Graph.py  add_two_numbers.py  binarySearch.py  duplicates_in.py  max_subarray.py  palindrome.py  park_walk.py  remove_el.py  roman_to_int.py  sort.py  traversal.py  traversalbinarytree.py  two_sum.py
angular-flask/: Dockerfile  ReadMe.md  app.py  requirements.txt  start.sh  startPythonDocker.sh
appsody-python/: .appsody-config.yaml
astronomy/: Dockerfile  README.md  index.html  plot_mean_mediam.py  pyproject.toml
aws/: README.md  auroraPostgres.py  consumeSQS.py  index.html  listS3Buckets.py  listSQSqueues.py  (+1 more)
environmental_science/: README.md  main.py  pyproject.toml  start_jupiter_lab_server.sh
environmental_science/earth-analytics/: 00-first-notebook.ipynb  01-flood-timeserie.ipynb  02-datetime.ipynb
environmental_science/earth-analytics/.ipynb_checkpoints/: 00-first-notebook-checkpoint.ipynb
web_server/Flask/flask-tdd-docker/: .coverage  .coveragerc  .dockerignore  Dockerfile  Dockerfile.prod  Pipfile  README.md  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt
web_server/Flask/flask-tdd-docker/project/: __init__.py
web_server/Flask/flask-tdd-docker/project/api/: ping.py
web_server/Flask/flask-tdd-docker/project/tests/: utils.py
web_server/Flask/flask-tdd-docker/project/tests/unit/: test_config.py
(+230 files in other folders)
