[project]
name = "environmental-science"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "earthpy>=0.9.4",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
    "setuptools<=80.9.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
