[project]
name = "flask-tdd-docker"
version = "0.1.0"
description = "Flask TDD Docker project modernized with uv and Python 3.12"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=2.3.0",
    "flask-restful>=0.3.10",
    "flask-sqlalchemy>=3.1.0", 
    "flask-admin>=1.6.1",
    "psycopg2-binary>=2.9.8",
    "gunicorn>=21.2.0",
    "pytz>=2023.3",
    "itsdangerous>=2.1.2",
    "jinja2>=3.1.2",
    "markupsafe>=2.1.3",
    "sqlalchemy>=2.0.0",
    "werkzeug>=2.3.7",
    "wtforms>=3.1.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.0",
    "flake8>=6.1.0",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0", 
    "black>=23.9.0",
    "flake8>=6.1.0",
]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.pytest.ini_options]
testpaths = ["project/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
